test/spec_vectors/store/fail/module_9.wat
(module (memory 1) (func (param i64) (result i64) (i64.store (i32.const 0) (i64.const 1))))